--- a/style.css
+++ b/style.css
@@ -10,17 +10,20 @@
 
 a{
 text-decoration: none;
+font-family: 'Oxygen', sans-serif;
 
+}
+
+body{
+font-family: 'Oxygen', sans-serif;
 }
 
 #navbar{
     display: flex;
     justify-content: flex-end;
     position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
-    background-color: rgb(37, 21, 1);
+    background-color: rgb(0, 14, 75);
     
 
 }
@@ -28,23 +31,28 @@ text-decoration: none;
 .navlist{
     display: flex;
     list-style-type: none;
+    margin-right: 1rem;
+
 
 }
+
 .navlist li{
-    padding: 1rem; 
+    padding: 1rem 0.5rem; 
 
 }
+
 .navlist a{
     display: block;
-    padding: 0.5rem;
+    padding: 1rem;
+    font-size: larger;
     text-decoration: none;
-    color: var(--main-white);
+    color: rgb(255, 255, 255);
 
 }
 
 .navlist a:hover{
-    background: var(--main-blue);
-    color: rgb(129, 129, 129);
+    background-color: rgb(59, 200, 255);
+    color: rgb(61, 61, 61);
 }
 
 #welcome-section{
