--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-:root{
-    --main-blue: #45567d;
-    --main-white: #f0f0f0;
-}
-
 *{
     margin: 0;
     padding: 0;
@@ -28,12 +23,13 @@ img{
     display: block;
 }
 
+/* this is the Nav section */
 #navbar{
     display: flex;
     justify-content: flex-end;
     position: fixed;
-  width: 100%;
-    background-color: rgb(0, 14, 75);
+    width: 100%;
+    background-color: #27187E;
     
 
 }
@@ -61,13 +57,14 @@ img{
 }
 
 .navlist a:hover{
-    background-color: rgb(59, 200, 255);
-    color: rgb(61, 61, 61);
+    background-color: #AEB8FE;
+    color: rgb(0, 0, 0);
 }
 
+/* this is the Welcome section */
 #welcome-section{
     height:100vh;
-    background-color: blue;
+    background-color: #758BFD;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,8 +74,87 @@ h1{
     font-size: 5rem;
     color:rgb(255, 255, 255);
 }
+
 h2{
 font-size: 3rem;
+padding:1rem;
+
+}
+
+/* this is the Projects section */
+#projects{
+display: flex;
+flex-direction:row;
+align-items: center;
+background-color: #AEB8FE;
+padding: 2rem;
+
+}
+.projecttiles{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.project-tile {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.project-tile a {
+  margin: 2rem;
+}
+
+figcaption{
+  text-align: center;
+  color: aliceblue;
+  background-color: darkblue;
+  border-radius: 3px 3px 6px 6px;
+}
+
+/* this is the Contact section */
+#contact{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #758BFD;
+  color:rgb(255, 255, 255);
+  padding: 2rem;
+}
+
+#contact h2{
+margin: 1rem;
+
+}
+.contactlinks{
+  display: flex;
+
+}
+.contactlinks a {
+  font-size: large;
+  padding: 1rem 1rem;
+  display: block;
+
+}
+
+.contact-details{
+  text-shadow: 2px 2px 1px #747474;
+  transition: transform 0.3s ease-out;
+
+}
+
+.contact-details:hover {
+  transform: translatey(-5px);
+  
+}
+
+footer p{
+  text-align: center;
+  padding: 2rem;
+  background-color: #27187E;
+  color: rgb(255, 255, 255);
+  font-size: larger;
 
 }
 
