--- a/Films/film-style.css
+++ b/Films/film-style.css
@@ -6,5 +6,15 @@
 
 h1 {
   color: rgb(155, 18, 0);
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
 }
 
