--- a/Starships/style.css
+++ b/Starships/style.css
@@ -6,9 +6,21 @@ box-sizing: border-box;
 }
 
 body {
-background-color: thistle;
+background-image: url(/Starships/ImagesSS/galaxybackground.png);
 }
 
+h1 {
+    text-align: center;
+    margin-bottom: 1rem;
+    color: white;
+    background-color: black;
+    padding: 0.5rem;
+    font-family: 'Cinzel', serif;
+    font-weight: bold;
+    font-size: xx-large;
+    text-shadow: 1px 1px 1px grey;
+    }
+    
 .mainContainer {
     display: flex;
 }
@@ -17,20 +29,13 @@ background-color: thistle;
     height: 100vh;
     display: flex;
     justify-content: center;
+   
 }
   
 .shipViewer img {
     padding: 10rem;
-    height: fit-content;
 }
   
-h1 {
-text-align: center;
-margin-bottom: 2rem;
-font-size: xx-large;
-
-}
-
 .box {
     background-color: crimson;
 }
@@ -38,6 +43,7 @@ font-size: xx-large;
 .box p {
 font-size: x-large;
 text-align: center;
+color: white;
 }
 
 .nav{
@@ -49,20 +55,32 @@ min-width: 20rem;
     margin: 1rem;
     list-style-type: none;
     font-family: monospace;
-    color: pink;
-
-}
-
-li:hover {
-    background-color: azure;
-    border-radius: 7px;
     padding: 1rem;
 
 }
 
+li:hover {
+background-color: rgb(17, 11, 17);
+padding: 7px;
+border-radius: 7px;
+box-shadow: 1px 1px 2px white;
+}
+
 a {
-color: darkmagenta;
+color: white;
 
 }
 
+a:hover{
+    color: lightgray;
+}
+
+footer{
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 1.5rem;
+    font-size: x-small;
+
+}
 
