--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -11,6 +11,10 @@ flex-wrap: wrap;
 
 .scene{
     width: 200px;
+    height: 200px;
+    perspective: 600px;
+    margin: 1rem;
+    
 }
 
 .card {
@@ -34,11 +38,11 @@ height: 100%;
 backface-visibility: hidden;
 }
 
-.front {
+.Front {
     background-color: darkseagreen;
 }
 
-.back{
+.Back{
     background-color: aqua;
 transform: rotateY(180deg);
 
