--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -1,7 +1,6 @@
 * { 
     margin: 0;
     box-sizing: border-box;
-    cursor: url(/Pokemon/ImagesP/Pokemon-logo.png), auto;
 }
 
 h2{
@@ -12,6 +11,17 @@ h2{
     color: #ffde00;
     text-shadow: 2px 2px 5px #003a70;
     background-color: #3d7dca;
+}
+
+button{
+color: white;
+background-color: #003a70;
+font-size: medium;
+font-family: monospace;
+padding: 0.5rem;
+border-radius: 9px;
+ margin:1rem;
+
 }
 
 main {
@@ -69,7 +79,7 @@ figure img{
 }
 
 figcaption{
-    font-family: 'Poppins', sans-serif;
+    font-family:monospace;
     text-align: center;
     padding: 0.5rem;
     background-color: #003a70;
