--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -1,89 +1,97 @@
-* { 
-    margin: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
-h2{
-    text-align: center;
-    padding: 2rem;
-    font-size: 50px;
-    font-family: 'Poppins', sans-serif;
-    color: #ffde00;
-    text-shadow: 2px 2px 5px #003a70;
-    background-color: #3d7dca;
+body {
+  cursor: url(/Pokemon/ImagesP/Ashcatchem.png), auto;
 }
 
-button{
-color: white;
-background-color: #003a70;
-font-size: medium;
-font-family: monospace;
-padding: 0.5rem;
-border-radius: 9px;
- margin:1rem;
+h2 {
+  text-align: center;
+  padding: 2rem;
+  font-size: 50px;
+  font-family: "Poppins", sans-serif;
+  color: #ffde00;
+  text-shadow: 2px 2px 5px #003a70;
+  background-color: #3d7dca;
+}
 
+button {
+
+display: flex;
+justify-content: center;
+  color: white;
+  background-color: #003a70;
+  font-size: medium;
+  font-family: monospace;
+  padding: 0.5rem;
+  border-radius: 9px;
+  margin: 1rem;
+  cursor: pointer;
 }
 
 main {
-border: solid 3px #003a70;
-margin: 1rem;
-padding: 1rem 1rem 5rem 1rem;
+  border: solid 3px #003a70;
+  margin: 1rem;
+  padding: 1rem 1rem 5rem 1rem;
 }
 
 .pokeGrid {
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .scene {
-    width: 200px;
-    height: 200px;
-    perspective: 600px;
-     margin: 3em 1em;
+  width: 200px;
+  height: 260px;
+  perspective: 600px;
+  margin: 1em;
 }
 
 .card {
-width: 100%;
-height: 260px;
-transition: transform 2s;
-transform-style: preserve-3d;
-cursor: pointer;
-position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 3s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  position: relative;
 }
 
 .card.is-flipped {
-transform: rotateY(180deg)
+  transform: rotateY(180deg);
 }
 
 .cardFace {
-position: absolute;
-width: 100%;
-height: 100%;
-backface-visibility: hidden;
-
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border: solid 3px lightblue;
 }
 
 .Front {
-    background-color: #3d7dca;
+  background-color: #3d7dca;
+  text-transform: capitalize;
+  text-align: center;
 }
 
-.Back{
-    background-color: lightblue;
-    transform: rotateY(180deg);
+.Back {
+  background-color: lightblue;
+  transform: rotateY(180deg);
 }
 
-figure img{
-    width: 200px;
+figure img {
+  width: 200px;
 }
 
-figcaption{
-    font-family:monospace;
-    text-align: center;
-    padding: 0.5rem;
-    background-color: #003a70;
-    color: white;
+figcaption {
+  font-family: monospace;
+  text-align: center;
+  padding: 0.5rem;
+  background-color: #003a70;
+  color: white;
 }
 
 footer {
@@ -92,5 +100,4 @@ footer {
   padding: 20px;
   font-size: x-small;
   background-color: #3d7dca;
-
 }
