--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -3,37 +3,44 @@
   box-sizing: border-box;
 }
 
-body {
-  cursor: url(/Pokemon/ImagesP/Ashcatchem.png), auto;
+header {
+display: flex;
+flex-direction: column;
+
 }
 
 h2 {
+width: 100%;
   text-align: center;
-  padding: 2rem;
-  font-size: 50px;
+  padding: 1rem;
+  font-size: 60px;
   font-family: "Poppins", sans-serif;
   color: #ffde00;
   text-shadow: 2px 2px 5px #003a70;
-  background-color: #3d7dca;
+  background: linear-gradient(#3d7dca, white);
+  border-bottom: solid 2px #f7d459;
 }
 
 button {
-
-display: flex;
-justify-content: center;
+width: 175px;
+margin: 1rem 3rem;
   color: white;
   background-color: #003a70;
-  font-size: medium;
+  font-size: large;
   font-family: monospace;
   padding: 0.5rem;
   border-radius: 9px;
-  margin: 1rem;
   cursor: pointer;
 }
 
+body {
+    cursor: url(/Pokemon/ImagesP/Ashcatchem.png), auto;
+  }
+
 main {
   border: solid 3px #003a70;
-  margin: 1rem;
+  background-color: #3d7dca;
+  margin: 0.5rem;
   padding: 1rem 1rem 5rem 1rem;
 }
 
@@ -55,8 +62,9 @@ main {
   height: 100%;
   transition: transform 3s;
   transform-style: preserve-3d;
-  cursor: pointer;
   position: relative;
+  text-transform: capitalize;
+  cursor: pointer;
 }
 
 .card.is-flipped {
@@ -68,19 +76,35 @@ main {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  border: solid 3px lightblue;
+  border: solid 1px lightblue;
+  border-radius: 7px;
 }
 
 .Front {
-  background-color: #3d7dca;
   text-transform: capitalize;
   text-align: center;
 }
 
 .Back {
-  background-color: lightblue;
+  background-color: #003a70;
+  color: white;
+  border: dashed 1px darkblue;
   transform: rotateY(180deg);
 }
+
+.Back h4 {
+  text-align: center; 
+  padding: 5px;
+  margin: 5px;
+  border-bottom: solid 2px #ffde00;
+  
+}
+
+ul li {
+list-style-type: square;
+padding: 5px;
+}
+
 
 figure img {
   width: 200px;
@@ -89,6 +113,7 @@ figure img {
 figcaption {
   font-family: monospace;
   text-align: center;
+  font-size: x-large;
   padding: 0.5rem;
   background-color: #003a70;
   color: white;
@@ -96,8 +121,8 @@ figcaption {
 
 footer {
   text-align: center;
-  color: white;
+  color: black;
   padding: 20px;
   font-size: x-small;
-  background-color: #3d7dca;
+  background: linear-gradient(white, #3d7dca);
 }
