--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -6,21 +6,35 @@
 header {
 display: flex;
 flex-direction: column;
+background: linear-gradient(#3d7dca, white);
 
 }
 
-h2 {
+h1 {
 width: 100%;
   text-align: center;
-  padding: 1rem;
+  padding-top: 0.5rem;
   font-size: 60px;
   font-family: "Poppins", sans-serif;
   color: #ffde00;
-  text-shadow: 2px 2px 5px #003a70;
-  background: linear-gradient(#3d7dca, white);
-  border-bottom: solid 2px #f7d459;
+  text-shadow: 2px 2px 2px #003a70;
+  
 }
 
+h1:hover{
+    transform: scale(0.5) translate(95%, 50%) rotate(-90deg);
+    
+}
+
+h2 {
+    
+      text-align: center;
+      font-family: "Poppins", sans-serif;
+      color: #fff6bd;
+      text-shadow: 2px 2px 2px #003a70;
+      
+    }
+    
 button {
 width: 175px;
 margin: 1rem 3rem;
@@ -31,10 +45,15 @@ margin: 1rem 3rem;
   padding: 0.5rem;
   border-radius: 9px;
   cursor: pointer;
+  
+}
+
+button:hover{
+transform: translatey(3px);
 }
 
 body {
-    cursor: url(/Pokemon/ImagesP/Ashcatchem.png), auto;
+    cursor: url(/Pokemon/ImagesP/pokebal-icon-.png), auto;
   }
 
 main {
@@ -60,16 +79,18 @@ main {
 .card {
   width: 100%;
   height: 100%;
-  transition: transform 3s;
+  transition: transform 2s;
   transform-style: preserve-3d;
   position: relative;
   text-transform: capitalize;
   cursor: pointer;
+
 }
 
 .card.is-flipped {
   transform: rotateY(180deg);
 }
+
 
 .cardFace {
   position: absolute;
@@ -88,23 +109,25 @@ main {
 .Back {
   background-color: #003a70;
   color: white;
-  border: dashed 1px darkblue;
+  border: dashed 1px lightblue;
   transform: rotateY(180deg);
 }
 
-.Back h4 {
-  text-align: center; 
+h4 {
+  width: 70px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   padding: 5px;
-  margin: 5px;
-  border-bottom: solid 2px #ffde00;
-  
+  margin-left: 7px;
+  margin-top: 2px;
+  border-bottom: solid 1px #ffde00;
 }
 
 ul li {
 list-style-type: square;
-padding: 5px;
-}
+font-family: 'Courier New', Courier, monospace;
+padding: 2px;
 
+}
 
 figure img {
   width: 200px;
@@ -117,6 +140,11 @@ figcaption {
   padding: 0.5rem;
   background-color: #003a70;
   color: white;
+}
+
+figcaption:hover {
+    background-color: #ffde00;
+    color: black;
 }
 
 footer {
