--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -4,62 +4,56 @@
 }
 
 header {
-display: flex;
-flex-direction: column;
-background: linear-gradient(#3d7dca, white);
-
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(#3d7dca, white);
+  margin-bottom: 2rem;
 }
 
 h1 {
-width: 100%;
+  width: 100%;
   text-align: center;
+  font-size: 4rem;
   padding-top: 0.5rem;
-  font-size: 60px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Luckiest Guy", cursive;
   color: #ffde00;
   text-shadow: 2px 2px 2px #003a70;
-  
-}
-
-h1:hover{
-    transform: scale(0.5) translate(95%, 50%) rotate(-90deg);
-    
 }
 
 h2 {
-    
-      text-align: center;
-      font-family: "Poppins", sans-serif;
-      color: #fff6bd;
-      text-shadow: 2px 2px 2px #003a70;
-      
-    }
-    
-button {
-width: 175px;
-margin: 1rem 3rem;
-  color: white;
-  background-color: #003a70;
-  font-size: large;
-  font-family: monospace;
-  padding: 0.5rem;
-  border-radius: 9px;
-  cursor: pointer;
-  
+  font-family: "Gochi Hand", cursive;
+  text-align: center;
+  color: #ffde00;
+  text-shadow: 2px 2px 2px #003a70;
+  border: solid 1px #3d7dca;
+  margin: 0 1rem;
+  padding: 5px;
 }
 
-button:hover{
-transform: translatey(3px);
+button {
+  font-family: "Press Start 2P", cursive;
+  font-size: x-small;
+  width: 175px;
+  margin: 2rem 2rem 0 2rem;
+  padding: 0.5rem;
+  color: white;
+  background-color: #003a70;
+  border-radius: 9px;
+  cursor: pointer;
+}
+
+button:hover {
+  transform: translatey(3px);
 }
 
 body {
-    cursor: url(/Pokemon/ImagesP/pokebal-icon-.png), auto;
-  }
+  cursor: url(/Pokemon/ImagesP/pokebal-icon-.png), auto;
+}
 
 main {
-  border: solid 3px #003a70;
+  border: solid 2px lightskyblue;
   background-color: #3d7dca;
-  margin: 0.5rem;
+  margin: 10px;
   padding: 1rem 1rem 5rem 1rem;
 }
 
@@ -84,13 +78,11 @@ main {
   position: relative;
   text-transform: capitalize;
   cursor: pointer;
-
 }
 
 .card.is-flipped {
   transform: rotateY(180deg);
 }
-
 
 .cardFace {
   position: absolute;
@@ -114,19 +106,23 @@ main {
 }
 
 h4 {
-  width: 70px;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  padding: 5px;
-  margin-left: 7px;
-  margin-top: 2px;
+  width: 160px;
+  text-align: center;
+  font-family: "Press Start 2P", cursive;
+  padding: 4px 0 2px 0;
+  margin-left: 12px;
+  margin-top: 7px;
   border-bottom: solid 1px #ffde00;
 }
 
 ul li {
-list-style-type: square;
-font-family: 'Courier New', Courier, monospace;
-padding: 2px;
+  font-family: "Courier New", Courier, monospace;
+  padding-top: 2px;
+  padding-left: 5px;
+}
 
+li::marker {
+  content: " \276F"; /* Your symbol here */
 }
 
 figure img {
@@ -134,23 +130,24 @@ figure img {
 }
 
 figcaption {
-  font-family: monospace;
   text-align: center;
-  font-size: x-large;
+  font-family: "Press Start 2P", cursive;
+  font-size: small;
   padding: 0.5rem;
   background-color: #003a70;
   color: white;
 }
 
 figcaption:hover {
-    background-color: #ffde00;
-    color: black;
+  background-color: #ffde00;
+  color: black;
 }
 
 footer {
   text-align: center;
   color: black;
   padding: 20px;
+
   font-size: x-small;
   background: linear-gradient(white, #3d7dca);
 }
