--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -46,6 +46,11 @@ h2 {
   padding: 5px;
 }
 
+.typeSelect{
+  background-color: aqua;
+  
+}
+
 button {
   font-family: "Press Start 2P", cursive;
   font-size: x-small;
