--- a/Congress/style.css
+++ b/Congress/style.css
@@ -37,6 +37,7 @@ button {
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-radius: 20px;
+    letter-spacing: 2px;
 }
 
 button:hover{
@@ -59,9 +60,12 @@ text-shadow: 1px 1px 3px lightgray;
 
 .seniority{
     text-align: center;
-    font-size: large;
-    margin: 1rem 0 2rem 0;
+    margin: 1rem 0 1rem 0;
     padding: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: small;
+    font-weight: lighter;
+
 }
 
 p {
@@ -74,10 +78,14 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 .loyaltyList {
 list-style-type: none;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-size: small;
 display: flex;
 justify-content: space-evenly;
  padding: 1rem;
 margin-bottom: 1rem;
+border: solid 1px lightblue;
+margin: 5px 10px;
 }
 
 .senatorsDiv {
@@ -86,11 +94,14 @@ margin-bottom: 1rem;
     justify-content:center;
     border-top: solid 2px darkgrey;
     padding-top: 1rem;
-   margin: 1rem;
+    margin: 1rem;
+
 }
 
-figure{
+figure {
   margin: 5px;  
+  border: double 1px darkgray;
+  border-radius: 5px;
 
 }
 
@@ -100,19 +111,22 @@ figure:hover{
 
 img {
     height: 175px;
+    width: 100%;
 
 }
 
 figcaption {
 display: flex;
+overflow-wrap: break-word;
 justify-content: center;
-width: 100%;
+width: 150px;
+height: 90px;
 background-color: darkred;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 text-align: center;
-padding: 7px;
+padding: 9px;
 color: white;
-border-radius: 5px;
+
 }
 
 figcaption:hover{
