--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -37,29 +37,44 @@ h1 {
     }
   
 
-h2 {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  text-align: center;
-  color: white;
-  -webkit-text-stroke: 1px #003a70;
-  background-color: #3d7dca;
-  padding: 5px;
+.selectionMenu{
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px;
 }
 
 .typeSelect{
-  background-color: aqua;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  letter-spacing: 2px;
+  border-radius: 5px;
+  background-color: #ffde00;
+  color: black;
+  width: 300px;
+  box-shadow: 2px 2px 3px darkblue;
+padding: 10px;
   
+}
+
+.typeSelect:hover{
+  transform: translatey(2px);
+  background-color: #fff4ab;
+}
+
+.pokeButtons{
+  display: flex;
+  justify-content: left;
 }
 
 button {
   font-family: "Press Start 2P", cursive;
   font-size: x-small;
   width: 150px;
-  margin: 1rem 2rem 0 1rem;
+  margin: 1rem 1rem 0 1rem;
   padding: 0.5rem;
   color: white;
   background-color: #003a70;
   border-radius: 9px;
+  box-shadow: 2px 2px 3px darkblue;
   cursor: pointer;
   animation-name: slidein;
   animation-duration: 3s;
@@ -67,19 +82,20 @@ button {
 
 @keyframes slidein {
 from {
-    margin-left: -100%;
-    width: 12%;
+    margin-left: -20%;
+    width: 11%;
   }
 
   to {
-    margin-right: 100%;
+    margin-right: 2%;
     width: 12%;
   }
 }
 
 
 button:hover {
-  transform: translatey(3px);
+  transform: translatey(2px);
+  background-color: #4f769b;
 }
 
 body {
@@ -121,12 +137,13 @@ main {
   transform: rotateY(180deg);
 }
 
+
 .cardFace {
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  border: solid 1px lightblue;
+  border: inset 3px lightblue;
   border-radius: 7px;
 }
 
@@ -140,6 +157,16 @@ main {
   color: white;
   border: dashed 1px lightblue;
   transform: rotateY(180deg);
+  font-size: x-small;
+}
+
+h3{
+  font-family: "Press Start 2P", cursive;
+  text-align: right;
+  padding-top: 9px;
+  padding-right: 7px;
+  padding-bottom: 1px;
+  font-size: xx-small;
 }
 
 h4 {
@@ -163,6 +190,12 @@ li::marker {
   content: " \276F"; /* Your symbol here */
 }
 
+figure {
+
+box-shadow: 1px 1px 5px darkblue;
+
+}
+
 figure img {
   width: 200px;
 }
@@ -171,8 +204,8 @@ figcaption {
   text-align: center;
   font-family: "Press Start 2P", cursive;
   font-size: small;
-  padding: 0.5rem;
-  background-color: #003a70;
+  padding: 0.5rem 0;
+  background-color: #003a7052;
   color: white;
 }
 
@@ -183,9 +216,9 @@ figcaption:hover {
 
 footer {
   text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: black;
   padding: 20px;
-
   font-size: x-small;
   background: linear-gradient(white, #3d7dca);
 }
