--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -7,40 +7,23 @@
 header {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   background: linear-gradient(#3d7dca, white);
   margin-bottom: 1rem;
-  
 }
 
-h1 {
-  width: 100%;
-  text-align: center;
-  font-size: 4rem;
-  padding-top: 0.5rem;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-  font-family: "Luckiest Guy", cursive;
-  color: #ffde00;
-  -webkit-text-stroke: 2px #003a70;
-  animation-name: rotate;
-  animation-duration: 3s;
-  animation-delay: 4s; 
-}
+header img{
+align-items: center;
+  width: 500px;
+  margin: 2rem 23rem;
 
-@keyframes rotate {
-    0% {
-        transform: rotateX(0);
-      }
-      100% {
-        transform: rotateX(360deg);
-      }
-    }
-  
+}
 
 .selectionMenu{
   display: flex;
   justify-content: flex-end;
-  margin: 20px;
+  margin-right: 50px;
+ 
 }
 
 .typeSelect{
@@ -51,8 +34,8 @@ h1 {
   color: black;
   width: 300px;
   box-shadow: 2px 2px 3px darkblue;
-padding: 10px;
-  
+ padding: 10px;
+ cursor: pointer;
 }
 
 .typeSelect:hover{
@@ -62,8 +45,23 @@ padding: 10px;
 
 .pokeButtons{
   display: flex;
-  justify-content: left;
+  justify-content: center;
+  animation-name: slidein;
+  animation-duration: 3s;
 }
+
+@keyframes slidein {
+  from {
+      margin-left: -75%;
+      width: 100%;
+    }
+  
+    to {
+      margin-right: 75%;
+      width: 100%;
+    }
+  }
+
 
 button {
   font-family: "Press Start 2P", cursive;
@@ -76,22 +74,8 @@ button {
   border-radius: 9px;
   box-shadow: 2px 2px 3px darkblue;
   cursor: pointer;
-  animation-name: slidein;
-  animation-duration: 3s;
+  
 }
-
-@keyframes slidein {
-from {
-    margin-left: -20%;
-    width: 11%;
-  }
-
-  to {
-    margin-right: 2%;
-    width: 12%;
-  }
-}
-
 
 button:hover {
   transform: translatey(2px);
@@ -107,6 +91,7 @@ main {
   background-color: #3d7dca;
   margin: 10px;
   padding: 1rem 1rem 5rem 1rem;
+  min-height: 100vh;
 }
 
 .pokeGrid {
@@ -204,8 +189,8 @@ figcaption {
   text-align: center;
   font-family: "Press Start 2P", cursive;
   font-size: small;
-  padding: 0.5rem 0;
-  background-color: #003a7052;
+  padding: 1rem 0;
+  background-color: rgba(0, 0, 0, 0.33);
   color: white;
 }
 
