--- a/Starships/style.css
+++ b/Starships/style.css
@@ -6,7 +6,7 @@ box-sizing: border-box;
 }
 
 body {
-background-image: url(/Starships/ImagesSS/galaxybackground.png);
+background-image: url(/Starships/ImagesSS/black\ galaxy.jpeg);
 }
 
 
@@ -24,6 +24,7 @@ h1 {
     
 .mainContainer {
     display: flex;
+
 }
 
 .shipViewer {
@@ -33,8 +34,9 @@ h1 {
    
 }
   
-.shipViewer img {
+img {
     padding: 10rem;
+    height: fit-content;
 }
   
 .box {
@@ -48,20 +50,23 @@ color: white;
 }
 
 .nav{
-min-width: 20rem;
+min-width: 15rem;
 
 }
 
 .navList {
     margin: 1rem;
+    padding: 0.5rem 1rem;
     list-style-type: none;
     font-family: monospace;
-    padding: 1rem;
-border: dashed 2px lightgray;
+    border: dotted 1px lightgray;
+    text-align: center;
 }
 
 li:hover {
-box-shadow: 1px 1px 2px white;
+border: groove 0.5px white;
+padding: 0.5rem 0;
+
 }
 
 a {
@@ -80,7 +85,6 @@ footer{
     font-size: x-small;
     padding: 20px;
     border: solid 1px gray;
-    margin: 0 10px 1rem 10px;
-
+    margin: 0 10px 0 10px;
 }
 
