--- a/style.css
+++ b/style.css
@@ -107,8 +107,12 @@ img {
 
 .project-tile {
   margin: 2rem;
-  border: solid 4px black;
+  border: solid 4px rgb(114, 84, 6);
   border-radius: 10px 0;
+}
+
+.project-tile:hover{
+  transform: translatey(5px);
 }
 
 .project-tile img {
@@ -119,7 +123,7 @@ img {
 figcaption {
   text-align: center;
   color: white;
-  background-color: black;
+  background-color: rgb(114, 84, 6);
   padding: 1rem;
   font-size: large;
   letter-spacing: 3px;
@@ -137,6 +141,7 @@ figcaption {
 }
 #contact h1 {
   font-size: 6rem;
+  -webkit-text-stroke: 2px rgb(114, 84, 6);
 }
 #contact h4{
   font-size: 20px;
