--- a/Starships/style.css
+++ b/Starships/style.css
@@ -6,7 +6,7 @@ box-sizing: border-box;
 }
 
 body {
-background-image: url(/Starships/ImagesSS/black\ galaxy.jpeg);
+background-color: black;
 }
 
 
